# Explainable-AI-for-News-Integrity

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt  run.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
app/: __init__.py  app.py
config/: config.py
notebooks/: fake_news_EDA&Preprocessing.ipynb  fake_news_classification.ipynb
src/: __init__.py  classifier.py  explainer.py  extractor.py  extractor_claimify.py  gcs_utils.py  retriever.py  retriever_pg.py
